@@ -3,3 +3,4 @@ dist
 MANIFEST
 *.pyc
 *.o
+*.swp
